--- a/self-portrait/self-portrait.html
+++ b/self-portrait/self-portrait.html
@@ -7,6 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    hello
+     <h1>Self-portrait</h1>
+
+    <div class="grid-container">
+        <div class="box box1"></div>
+        <div class="box box2"></div>
+        <div class="box box3"></div>
+    </div>
 </body>
 </html>
