--- a/self-portrait/self-portrait.html
+++ b/self-portrait/self-portrait.html
@@ -9,10 +9,10 @@
 <body>
      <h1>Self-portrait</h1>
 
-    <div class="grid-container">
-        <div class="box box1"></div>
-        <div class="box box2"></div>
-        <div class="box box3"></div>
+     <div class="grid-container">
+        <div class="item item-1"></div>
+        <div class="item item-2"></div>
+        <div class="item item-3"></div>
     </div>
 </body>
 </html>
