--- a/self-portrait/self-portrait.html
+++ b/self-portrait/self-portrait.html
@@ -9,10 +9,12 @@
 <body>
      <h1>Self-portrait</h1>
 
-     <div class="grid-container">
-        <div class="item item-1"></div>
-        <div class="item item-2"></div>
-        <div class="item item-3"></div>
-    </div>
+     <style>
+         .rectangle {
+             height: 100px;
+             width: 50px;
+             background-color: #555;
+         }
+    </style>
 </body>
 </html>
