--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
             <li><a href="painting/painiting.html">Reproduce Painting</a></li>
         </ul>
     </section>
+    
+    <section class="labs">
+        <h3>Labs</h3>
+        <ul>
+            <li><a href="/lab3-bootstrap.html">Lab 3</a></li>
+        </ul>
+    </section>
 
 </body>
 </html>
