--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <section class="labs">
         <h3>Labs</h3>
         <ul>
-            <li><a href="/lab3-bootstrap.html">Lab 3</a></li>
+            <li><a href="Lab3-bootstrap/lab3-bootstrap.html">Lab 3</a></li>
         </ul>
     </section>
 
