--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <section class="Mobile site">
         <h4>Mobile Site</h4>
         <ul>
-            <li><a href="https://www.google.com/maps/place/Sehome+Hill+Arboretum/@48.7354156,-122.4798767,15z/data=!4m5!3m4!1s0x0:0x2d9f1a3f306a64ff!8m2!3d48.7354156!4d-122.4798767">Lab 3</a></li>
+            <li><a href="https://www.google.com/maps/place/Sehome+Hill+Arboretum/@48.7354156,-122.4798767,15z/data=!4m5!3m4!1s0x0:0x2d9f1a3f306a64ff!8m2!3d48.7354156!4d-122.4798767">Google maps location</a></li>
         </ul>
     </section>
 
