--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
         <ul>
             <li><a href="Lab3-bootstrap/lab3-bootstrap.html">Lab 3</a></li>
         </ul>
+        <ul>
+            <li><a href="
     </section>
     
     <section class="Mobile site">
