--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <li><a href="Lab3-bootstrap/lab3-bootstrap.html">Lab 3</a></li>
         </ul>
         <ul>
-            <li><a href="lab4/lab4.html>Lab 4</a></li>
+            <li><a href="lab4/lab4.html">Lab 4</a></li>
         </ul>
     </section>
     
